[package]
name = "Peer-2-Peer-Messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
data-encoding = "2.10.0"
futures-lite = "2.6.1"
iroh = "0.96.1"
iroh-gossip = "0.96.0"
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

chacha20poly1305 = "0.10"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

